<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home_selector"
        android:title="@string/home"
        />

    <item
        android:id="@+id/shoppingFragment"
        android:icon="@drawable/shopping_selector"
        android:title="@string/shop" />

    <item
        android:id="@+id/shoppingBagFragment"
        android:icon="@drawable/shoppingbag_selector"
        android:title="@string/bag" />

    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/favorites_selector"
        android:title="@string/favorites" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/profile_selector"
        android:title="@string/profile" />

</menu>